# osmium

./: .deps  .gitignore  App.swift  Bridge.swift  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  Terminal.swift  Window.swift  api.md  build.ps1  entry.ts  hoopsnake.txt  main.swift  osm  osm.yaml  osmium  package.json  readme.md  test_font.swift  tsconfig.json
cmd/: osm.ts
core/agent/: index.ts
core/cmd/: osm.ts
core/web/: client.ts  server.ts
docs/: agent.md  migration.md  ownership.md  runtime.md
kilo/: kilo
mac/: Package.resolved  Package.swift  main.swift  mkapp
mac/editor/: agent.swift  control.swift  osmium.swift  tab.swift
mac/ui/: components.swift  glass.swift
mac/util/: config.swift
native/: Agent.swift  AgentBridge.swift  AgentSurface.swift  AgentViews.swift  AppLogicBridge.swift  AppSupport.swift  MainController.swift  Package.swift  Shell.swift  SidebarPicker.swift  Surfaces.swift  main.swift
native/PickerSupport/: AgentTextSupport.swift  SidebarPickerSupport.swift
src/: app.rs  binds.rs  cli.rs  config-print.ts  config.ts  draw.c  event.c  file.c  format.c  ipc.rs  ipc.ts  main.c  main.cpp  main.rs  main.test.ts  main.ts  osm  plist.xml  protocol.ts  sdlcore.c  sdlcore.h  tab.c  tab.cpp  terminal.rs  text.c  text.cpp  ui.c  ui.h  window.cpp
src/agent/: bridge.ts  chatgpt.ts  reducer.test.ts  reducer.ts  usecodex.ts
src/app/: bridge.ts
util/: go.mod  main.go  touch.go  tree.go
win/: event.c  event.h  font.c  font.h  main.c  sdlcore.c  sdlcore.h  settings.txt  tab.c  tab.h  text.c  text.h  ui.c  ui.h  win
(+26 files in other folders)
