[package]
name = "osmium"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "osm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
directories = "6.0"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
vt100 = "0.15"
webbrowser = "1.0"
